--- a/EasyStart/EasyStart.csproj
+++ b/EasyStart/EasyStart.csproj
@@ -214,7 +214,8 @@
     <Content Include="Scripts\wookmark\images\loader.gif" />
     <Content Include="Scripts\wookmark\js\jquery.wookmark.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="ViewModels\HomeViewModel.js" />
+    <Content Include="ViewModels\GridPageViewModel.js" />
+    <Content Include="ViewModels\HomePageViewModel.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
